<resources>
    <string name="app_name">SoSoon Exchange</string>
    <string name="fcm_channel_id">exchange-android</string>
    <string name="fcm_channel_name">exchange channel</string>
    <string name="fcm_channel_desc">$app_name</string>
    <string name="facebook_app_id">848468592937873</string>
    <string name="fb_login_protocol_scheme">fb848468592937873</string>
    <string name="facebook_client_token">dc2752cc34605754c6211c32d36b15e6</string>
    <string name="line_channel_id">2000299834</string>
    <string name="line_channel_secret">f20406dc71b57cf464e49a1165ebebe0</string>
    <string name="title_code">Code</string>
    <string name="title_login">LOGIN</string>
    <string name="title_login_en">LOGIN</string>
    <string name="title_new_account">Create a new account</string>
    <string name="title_forgot_password">Forgot your password?</string>
    <string name="title_back_to_main_login">HOME</string>
    <string name="title_login_not_success">Login was unsuccessful.</string>
    <string name="title_tern_and_con">Terms and Conditions</string>
    <string name="title_register_form">Register</string>
    <string name="title_register_edit_form">Edit Profile</string>
    <string name="title_main_topup">Top up</string>
    <string name="title_main_exchange">Exchange</string>
    <string name="title_main_history">Transactions</string>
    <string name="title_main_cards">Card</string>
    <string name="title_main_cards_toolbar">Physical Card</string>
    <string name="title_main_withdraw">Withdrawal</string>
    <string name="title_main_transfer">Transfer</string>
    <string name="title_main_balance">Balance</string>
    <string name="title_main_recent_list">Latest Items</string>
    <string name="title_topup_amount">Amount </string>
    <string name="title_topup_amount_th">(THB)</string>
    <string name="title_topup_by_k_plus">Top up with K PLUS</string>
    <string name="title_history_transaction">Transaction history</string>
    <string name="title_history_transactino_list">Items</string>
    <string name="title_history_date_select">Start date %1$s - %2$s</string>
    <string name="title_enter_address_card">Shipping address information</string>
    <string name="title_send_card_detail">Shipping details card</string>
    <string name="title_withdraw_by_k_plus">Withdrawal to K PLUS</string>
    <string name="title_confirm_password">Verify Pass</string>
    <string name="title_or_finger_scan">or scan fingerprints</string>
    <string name="title_withdraw_detail">Withdrawal details</string>
    <string name="title_summary_date">Date/Time</string>
    <string name="title_summary_amount">Amount</string>
    <string name="title_summary_country">Country</string>
    <string name="title_summary_shop">Shop</string>
    <string name="title_set_pin">Set up PIN</string>
    <string name="title_finger_scan">Fingerprint scan</string>
    <string name="title_name">Name</string>
    <string name="title_account_number">Account</string>
    <string name="title_currency">Currency</string>
    <string name="title_transaction_id">Transactionid</string>
    <string name="hint_phone">Mobile</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date/Month/Year of birth</string>
    <string name="hint_id_card">Attach a copy of your ID card.</string>
    <string name="hint_id_card_size_25mb">Maximum upload files size: 25 mb (.jpg,.png)</string>
    <string name="hint_house_no">Village No.</string>
    <string name="hint_village">Village/Unit</string>
    <string name="hint_village_no">หมู่</string>
    <string name="hint_alley">ซอย</string>
    <string name="hint_street">Street</string>
    <string name="hint_sub_district">SubDistrict/County</string>
    <string name="hint_district">District/Area</string>
    <string name="hint_province">Province</string>
    <string name="hint_country">Country</string>
    <string name="hint_postcode">Postcode</string>
    <string name="hint_reg_password">Password</string>
    <string name="hint_reg_confirm_password">Confirm Password</string>
    <string name="hint_resend_otp">Request a new OTP code again.</string>
    <string name="hint_attach_file">Name File : %1$s</string>
    <string name="hint_th_currency">THB</string>
    <string name="hint_zero_with_point">0.00</string>
    <string name="hint_main_empty_item">Please top up before use.</string>
    <string name="hint_topup_max">Maximum 500,000.00 THB</string>
    <string name="hint_history_transaction_empty">Item not found</string>
    <string name="hint_transaction_title">แลกเงิน</string>
    <string name="hint_transaction_money">900.00 THB (30.24 USD)</string>
    <string name="hint_transaction_time">18 ชั่วโมงที่แล้ว</string>
    <string name="hint_transaction_status_text">Done</string>
    <string name="hint_exchange_from">From</string>
    <string name="hint_exchange_your_balance_from">You have  </string>
    <string name="hint_exchange_to_other_currency">1 %1$s to %2$s %3$s</string>
    <string name="hint_exchange_to">To</string>
    <string name="hint_date_from">From</string>
    <string name="hint_date_to">To</string>
    <string name="hint_search">Search</string>
    <string name="hint_card_no">1234 5678 9123 4567</string>
    <string name="hint_card_date">VALID DATES %1$s</string>
    <string name="hint_card_name">YOUR NAME HERE</string>
    <string name="hint_select_currency">Choose the currency</string>
    <string name="hint_select_country">Choose country</string>
    <string name="hint_select_shop">Choose Shop</string>
    <string name="hint_withdraw_your_balance">You have  </string>
    <string name="hint_reset_pin">Reset PIN code</string>
    <string name="hint_input_transfer">Amount you want to transfer.</string>
    <string name="hint_input_account_no">Please enter account number.</string>
    <string name="message_maintenance">ปิดปรับปรุงระบบชั่วคราว\nขออภัยในความไม่สะดวก</string>
    <string name="message_soft_update">พร้อมให้บริการแล้ว</string>
    <string name="message_force_update">กรุณาอัพเดทเวอร์ชั่น</string>
    <string name="message_device_not_supported">Device not supported</string>
    <string name="message_no_internet">Connection Lost</string>
    <string name="message_please_check_no_internet">Please check your internet connection and then try again.</string>
    <string name="message_error">Sorry, something went wrong</string>
    <string name="message_confirm_logout">Do you want to logout?</string>
    <string name="message_register_success">You have successfully registered.</string>
    <string name="message_dummy_term">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Malesuada fames ac turpis egestas maecenas pharetra convallis posuere morbi. Praesent elementum facilisis leo vel. Dignissim cras tincidunt lobortis feugiat vivamus at augue. Odio euismod lacinia at quis. Lorem ipsum dolor sit amet consectetur adipiscing. Fermentum posuere urna nec tincidunt praesent semper. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet consectetur. Mattis nunc sed blandit libero volutpat sed cras ornare arcu. Aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Tellus orci ac auctor augue mauris augue neque gravida in. Imperdiet sed euismod nisi porta lorem. Penatibus et magnis dis parturient montes nascetur. Egestas congue quisque egestas diam in. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Amet commodo nulla facilisi nullam. Sapien pellentesque habitant morbi tristique senectus et netus. Mattis ullamcorper velit sed ullamcorper morbi. Nascetur ridiculus mus mauris vitae ultricies leo. Amet porttitor eget dolor morbi non arcu. Nunc non blandit massa enim nec. Nisi scelerisque eu ultrices vitae auctor eu augue ut. In cursus turpis massa tincidunt dui ut ornare. Pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies. Mauris vitae ultricies leo integer. Tellus elementum sagittis vitae et leo duis ut diam quam. Tellus elementum sagittis vitae et leo duis ut diam quam.</string>
    <string name="message_main_empty">The most recent ones will be displayed here when you start using them.</string>
    <string name="message_topup_success">Top up successfully </string>
    <string name="message_exchange_success">Exchange successfully </string>
    <string name="message_withdraw_success">Withdrawal successfully </string>
    <string name="message_transfer_success">Transfer successfully </string>
    <string name="message_edit_profile_success">You have successfully edit profile.</string>
    <string name="message_valid_term_and_con">Please accept the terms and conditions for using the service.</string>
    <string name="message_policy">Currency speculation is a practice that does not comply with the conditions and may Illegal. If it is violated, the service provider reserves the right to Cancel the card and claim compensation for damages incurred.</string>
    <string name="message_logout">Do you want to logout?</string>
    <string name="message_input_pin">Please enter your 6 digit PIN number.\nthat you need for the transaction</string>
    <string name="message_save_picture_success">The picture was saved.</string>
    <string name="message_pls_set_pin">Please enter 6 digit PIN number.\nthat you need for the transaction</string>
    <string name="message_pls_set_finger">Please scan your fingerprint.</string>
    <string name="message_set_pin_success">The PIN code was successfully set.</string>
    <string name="message_set_finger_scan_success">Fingerprint setup successful</string>
    <string name="message_currency_less_one">There are no other currencies that can be exchanged.</string>
    <string name="message_cant_transfer_own_account">Cannot transfer to own account</string>
    <string name="message_wallet_not_found">WalletID Not Found</string>
    <string name="message_shipping_card_detail">1. No daily withdrawal limit.\n\n2. In case you withdraw more than 300,000 Baht, you will need to show an Passport ID.\n\n3. Withdrawal at a clearing district different from yours will incur a fee. (Fee details can be found in Website Sosoon\'s announcements.)\n\n4. accounts on Sosoon can use this withdrawal service via Specified Bank QR code.></string>
    <string name="message_withdraw_detail">1. Daily withdrawal limit is not more than 5,000 USD per transaction and total amounts are not more than 20,000 USD.\n\n
2. Service fee 1-2 USD transaction , depends on the service agent.\n\n
3. accounts on Sosoon can use this withdrawal service via Specified Bank QR Code.</string>
    <string name="button_close">Close</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_logout">Logout</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_update">Update</string>
    <string name="button_login">Login</string>
    <string name="button_apple_login">Log in With Apple</string>
    <string name="button_facebook_login">เข้าใช้งานด้วย Facebook</string>
    <string name="button_line_login">เข้าใช้งานด้วย Line</string>
    <string name="button_google_login">Log in With Google</string>
    <string name="button_app_login">Login</string>
    <string name="button_register">Apply</string>
    <string name="button_start_working">Getting Started</string>
    <string name="button_confirm_username">Verify Username</string>
    <string name="button_slide_to_topup">Slide to top up</string>
    <string name="button_slide_to_exchange">Slide to Exchange</string>
    <string name="validate_password_incorrect">The password is incorrect. Please try again.</string>
    <string name="chk_term_and_con"> I accept the terms and conditions using the service.</string>
</resources>