<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        tools:context=".ui.page.login.LoginFragment"
        android:paddingVertical="@dimen/margin_28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/title_login"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/margin_28dp"
            style="@style/TextViewLarge"
            app:fontFamily="@font/prompt_semibold"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"/>

        <com.startwithn.exchange_android.ui.widget.ButtonLogin
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:buttonIconSrc="@drawable/icon_apple"
            app:buttonTitle="@string/button_apple_login"
            app:buttonBgSrc="@drawable/button_apple"
            />
        <com.startwithn.exchange_android.ui.widget.ButtonLogin
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_height="wrap_content"
            app:buttonIconSrc="@drawable/icon_facebook"
            app:buttonTitle="@string/button_facebook_login"
            app:buttonBgSrc="@drawable/button_facebook"/>
        <com.startwithn.exchange_android.ui.widget.ButtonLogin
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonIconSrc="@drawable/icon_line"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:buttonTitle="@string/button_line_login"
            app:buttonBgSrc="@drawable/button_line"
            />
        <com.startwithn.exchange_android.ui.widget.ButtonLogin
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:buttonIconSrc="@drawable/icon_line"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:buttonTitle="@string/button_app_login"
            app:buttonBgSrc="@drawable/button_login"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/title_new_account"
            android:textColor="@color/color_error_text"
            style="@style/TextViewRegular"
            app:fontFamily="@font/prompt_regular"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>