<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isSelectCurrencyEmpty"
            type="Boolean" />

        <variable
            name="isSelectCountryEmpty"
            type="Boolean" />

        <variable
            name="isSelectShopEmpty"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:id="@+id/layout_pin"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_card"
                style="@style/TextViewLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title_confirm_password"
                android:textColor="@color/text_edittext_gray"
                app:fontFamily="@font/prompt_semibold" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/message_input_pin"
                android:textColor="@color/color_error_text"
                app:fontFamily="@font/prompt_regular" />

            <com.poovam.pinedittextfield.SquarePinField
                android:id="@+id/spf_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_36dp"
                android:background="@drawable/bg_pin_field"
                android:inputType="numberPassword"
                android:scaleY="1.5"
                app:cornerRadius="6dp"
                app:distanceInBetween="8dp"
                app:fieldBgColor="#F1F2F2"
                app:fieldColor="@color/colorPrimary"
                app:highlightColor="@color/colorPrimary"
                app:isCursorEnabled="true"
                app:lineThickness="0.5dp"
                app:noOfFields="@integer/length_otp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_36dp"
                android:layout_marginBottom="@dimen/margin_28dp"
                android:gravity="center_horizontal"
                android:text="@string/title_or_finger_scan"
                android:textColor="@color/text_edittext_gray"
                app:fontFamily="@font/prompt_semibold" />

            <ImageView
                android:id="@+id/img_finger_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_finger_scan" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm"
                style="@style/TextViewRegularPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:background="@drawable/button_confirm"
                android:text="@string/button_confirm"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewMini"
            app:layout_constraintTop_toBottomOf="@id/layout_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18dp"
            android:gravity="center_horizontal"
            android:text="@string/validate_password_incorrect"
            android:textColor="@color/color_error_text"
            app:fontFamily="@font/prompt_regular" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>